--- a/GiftTalk/app/src/main/res/values/styles.xml
+++ b/GiftTalk/app/src/main/res/values/styles.xml
@@ -8,4 +8,14 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="radio_button">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:button">@null</item>
+
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textColor">@drawable/radiobutton_text_color</item>
+    </style>
+
 </resources>
