--- a/GiftTalk/app/src/main/res/layout/fragment_category.xml
+++ b/GiftTalk/app/src/main/res/layout/fragment_category.xml
@@ -1,6 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_layout_category"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="1">
+
+    </android.support.design.widget.TabLayout>
+
+    <TextView
+        android:id="@+id/tv_category_search"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_weight="0.7"
+        android:background="@drawable/search"
+        android:drawableLeft="@mipmap/icon_search"
+        android:gravity="center"
+        android:text="选份走心好礼送给Ta" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager_category"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="9">
+
+    </android.support.v4.view.ViewPager>
 </LinearLayout>
