--- a/GiftTalk/app/src/main/res/layout/fragment_home_reuse.xml
+++ b/GiftTalk/app/src/main/res/layout/fragment_home_reuse.xml
@@ -3,8 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-<android.support.v7.widget.RecyclerView
+
+<com.androidkun.PullToRefreshRecyclerView
     android:id="@+id/recycler_view_refuse"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+    android:layout_height="match_parent"/>
 </LinearLayout>
