--- a/GiftTalk/app/src/main/res/layout/item_single_content_recycler.xml
+++ b/GiftTalk/app/src/main/res/layout/item_single_content_recycler.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_margin="10dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+
+        android:layout_width="160dp"
+        android:layout_height="190dp"
         android:orientation="vertical">
 
         <ImageView
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
             android:id="@+id/iv_single_right_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:scaleType="fitXY"
             android:src="@mipmap/ic_launcher" />
 
